# dbmigrator

./: .editorconfig  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
dbmigrator/: Cargo.toml
dbmigrator/src/: changelog.rs  drivers.rs  lib.rs  migrator.rs  recipe.rs
dbmigrator/src/drivers/: tokio_postgres.rs
dbmigrator/tests/: macro.rs
dbmigrator_cli/: Cargo.toml  build.rs  ddlconfig.yaml
dbmigrator_cli/src/: cli.rs  ddl.rs  main.rs
dbmigrator_cli/tests/: cli.rs
dbmigrator_core/: Cargo.toml
dbmigrator_core/src/: recipe.rs
dbmigrator_macros/: Cargo.toml
dbmigrator_macros/src/: lib.rs
examples/pgsql_mattermost_channels/: 000000_baseline.sql  000118_create_index_poststats.up.sql  000124_fixup_test1.sql
