[package]
name = "dbmigrator"
version = "0.4.4-alpha"
rust-version = "1.82"
description = "Powerful SQL migration toolkit for Rust"
authors = [ "Przemyslaw Sztoch <przemyslaw@sztoch.pl>" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/dbmigrator/"
repository = "https://github.com/dbmigrator/dbmigrator"
keywords = ["database", "sql", "migrations", "orm"]
categories = ["database"]
edition = "2021"

[features]
tokio-postgres = ["dep:tokio-postgres", "tokio", "tokio/rt"]
#mysql_async = ["dep:mysql_async"]
#tiberius = ["dep:tiberius", "futures", "tokio", "tokio/net", "tokio-util", "serde"]
serde = ["dep:serde"]

[dependencies]
async-trait = "0.1"
thiserror.workspace = true

# allow multiple versions of the same dependency if API is similar
tokio-postgres = { version = ">= 0.5", optional = true, features = ["with-time-0_3"] }
#mysql_async = { version = ">= 0.28", optional = true, default-features = false, features = ["minimal"] }
#tiberius = { version = ">= 0.7, <= 0.12", optional = true, default-features = false }
tokio = { version = "1", optional = true }
#futures = { version = "0.3.16", optional = true, features = ["async-await"] }
#tokio-util = { version = "0.7.7", features = ["compat"], optional = true }
time = { version = "0.3", features = ["parsing", "formatting"] }
serde = { version = "1", features = ["derive"], optional = true }
dbmigrator_core = { version = "0.4.3-alpha", path = "../dbmigrator_core" }
dbmigrator_macros = { version = "0.4.3-alpha", path = "../dbmigrator_macros" }

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true

 [lints.rust]
unused = "allow"
