[package]
name = "dbmigrator_cli"
version = "0.4.4-alpha"
description = "Provides the CLI for the dbmigrator crate"
authors = ["Przemyslaw Sztoch <przemyslaw@sztoch.pl>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dbmigrator"
documentation = "https://docs.rs/dbmigrator/"
repository = "https://github.com/dbmigrator/dbmigrator"
readme = "README.md"
keywords = ["sql", "migrations", "cli"]
edition = "2021"

[[bin]]
name = "dbmigrator"
path = "src/main.rs"

[features]
default = ["postgresql"] #, "mysql", "mssql"]
postgresql = ["dbmigrator/tokio-postgres", "tokio"]
#mysql = ["dbmigrator/mysql_async", "tokio"]
#mssql = ["dbmigrator/tiberius", "tokio"]

[dependencies]
dbmigrator = { version = "0.4.4-alpha", path = "../dbmigrator", default-features = false }
human-panic = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
tokio = { version = "1", features = ["full"], optional = true }
thiserror = "2"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
indicatif = "0.17.8"
comfy-table = { version = "7", features = ["tty", "console"] }
time = { version = "0.3", features = ["parsing", "formatting"] }
serde = { version = "1.0.214", features = ["derive"] }
pgarchive = { version = "0.4.0" }

handlebars = "6"
serde_yaml = "0.9"

[dev-dependencies]
predicates = "3"
assert_cmd = "2"

[build-dependencies]
winresource = "0.1"

[package.metadata.deb]
name = "dbmigrator"
maintainer = "Przemyslaw Sztoch <przemyslaw@sztoch.pl>"
depends = "libssl-dev"

[package.metadata.winresource]
ProductName = "DBMigrator"
FileDescription = "DBMigrator CLI"
LegalCopyright = "(C) DBMigrator. All rights reserved"
OriginalFilename = "dbmigrator.exe"
